fixed padding spacing issues

--- a/sass/components/_NavBarMobile.scss
+++ b/sass/components/_NavBarMobile.scss
@@ -3,7 +3,10 @@
 	top: 0;
 	left: 0;
 	right: 0;
-	padding: 10px;
+	padding-top: 10px;
+	padding-right: 20px;
+	padding-left: 20px;
+	padding-bottom: 10px;
 	background: white;
 	box-shadow: 0 4px 2px -2px rgba(0,0,0,0.25);
 	.mobile-header {
